--- a/packaging/rpm/Dockerfile
+++ b/packaging/rpm/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos:7
 
 RUN yum install -y epel-release
-RUN yum install -y make mock python-pip which git
+RUN yum install -y make mock python-pip which git libcgroup-tools
 
 # Fix output of rpm --eval '%{?dist}'
 RUN sed -i "s/.el7.centos/.el7/g" /etc/rpm/macros.dist
